Fix event list item alignment and rename files

--- a/frontend/src/ui/app.scss
+++ b/frontend/src/ui/app.scss
@@ -32,10 +32,12 @@ h1, h2, h3, h4, h5, p {
     transition: transform .3s ease-out;
 
     .text-content {
+        align-self: center;
         order: 2;
     }
 
     .img-content {
+        align-self: center;
         order: 1;
     }
 
@@ -57,6 +59,7 @@ h1, h2, h3, h4, h5, p {
     &:hover {
         background-color: #CCC;
         transform: translate(.5em, -.5em);
+        cursor: pointer;
 
         &:nth-child(even) {
             transform: translate(-.5em, -.5em);
